--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,12 @@
+body{
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #34495e;
+}
+
+.min-height{
+    min-height: 655px;
+}
 .upload-box{
     margin: 10px auto;
     /*text-align: center;*/
@@ -38,6 +47,9 @@ span.alert-copy{
     padding: 3px 5px;
     font-size: 12px;
     opacity: 1;
+}
+.instruction{
+    margin-top: 10px;
 }
 @media (max-width: 992px) {
     .up-speed {
